--- a/regression_ml.ipynb
+++ b/regression_ml.ipynb
@@ -2,7 +2,230 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import*\n",
+    "%matplotlib inline\n",
+    "\n",
+    "\n",
+    "\n",
+    "####################################################################################################################################################\n",
+    "def resample_df(df, new_time):\n",
+    "    new_time_df = pd.DataFrame({'time':new_time})\n",
+    "    new_df = df.merge( new_time_df, on='time', how='outer', suffixes=('', ''), sort=True )\n",
+    "    new_df = new_df.interpolate(method='nearest')\n",
+    "    \n",
+    "    new_df = new_df.merge( new_time_df, on='time', how='inner', suffixes=('', ''), sort=True )\n",
+    "    return new_df\n",
+    "####################################################################################################################################################\n",
+    "\n",
+    "\n",
+    "\n",
+    "####################################################################################################################################################\n",
+    "class NODE(object):\n",
+    "    n_marker = 3\n",
+    "    ################################################################################################################################################\n",
+    "    def __init__(self, markers_color, IDD=None):\n",
+    "        self.markers_color = markers_color\n",
+    "        self.IDD = IDD\n",
+    "\n",
+    "        self.markers = None\n",
+    "        self.rssi = None\n",
+    "    ################################################################################################################################################\n",
+    "    def load_rssi(self, dataset_name, file_name, window_length=11):\n",
+    "        # Load data \n",
+    "        rssi_file_path = get_rssi_file_path(dataset_name, file_name)       \n",
+    "        raw_df = pd.read_csv(\n",
+    "            rssi_file_path,                                                     # relative python path to subdirectory\n",
+    "            delimiter  = ';',                                                   # Tab-separated value file.\n",
+    "            usecols = ['IDD', 'Time', 'Ant/RSSI'],                              # Only load the three columns specified.\n",
+    "            parse_dates = ['Time'] )                                            # Intepret the birth_date column as a date      \n",
+    "\n",
+    "        # self.rssi.loc[ self.rssi.IDD != self.IDD,'rssi'] = np.nan\n",
+    "        raw_df = raw_df.loc[ raw_df['IDD'] == self.IDD, :]\n",
+    "        self.rssi = pd.DataFrame({ 'rssi': raw_df['Ant/RSSI'].str.replace('Ant.No 1 - RSSI: ', '').astype(int) })\n",
+    "\n",
+    "        # Processing\n",
+    "        self.rssi = self.rssi.rolling(window_length, axis=0).median()   # Smoothing\n",
+    "        self.rssi = self.rssi.ffill(axis=0).bfill(axis=0)               # Gap Filling\n",
+    "         \n",
+    "        # Time\n",
+    "        date_time = pd.to_datetime( raw_df['Time'] , format=datime_format)\n",
+    "        self.rssi['time'] = [ np.round( (datetime.combine(date.min, t.time())-datetime.min).total_seconds(), 2) for t in date_time]\n",
+    "\n",
+    "        return\n",
+    "    ################################################################################################################################################\n",
+    "    def load_markers(self, dataset_name, file_name, window_length=11):   \n",
+    "      \n",
+    "        # Load raw data \n",
+    "        motion_file_path = get_markers_file_path(dataset_name, file_name + '_' + self.markers_color)  \n",
+    "        self.markers = pd.read_csv( motion_file_path, delimiter=\"\\t\", header=None, dtype=np.float64)\n",
+    "                \n",
+    "        # Processing\n",
+    "        self.markers = self.markers.rolling(window_length, axis=0).mean()    # Gap filling\n",
+    "        self.markers = self.markers.ffill(axis=0).bfill(axis=0)              # Smoothing\n",
+    "\n",
+    "        # Time\n",
+    "        time_file_path = get_time_file_path(dataset_name, file_name)    \n",
+    "        with open(time_file_path , 'r') as f:  lines = f.read().splitlines() \n",
+    "        date_time = pd.to_datetime( lines , format=datime_format)\n",
+    "        self.markers['time'] = [ (datetime.combine(date.min, t.time())-datetime.min).total_seconds() for t in date_time]\n",
+    "        \n",
+    "        return\n",
+    "    ################################################################################################################################################\n",
+    "    def shift_time(self, shift):\n",
+    "        self.markers.time -= shift\n",
+    "        if self.rssi is not None: self.rssi.time -= shift\n",
+    "        return\n",
+    "    ################################################################################################################################################\n",
+    "    def center(self, window_length=7, polyorder=1):\n",
+    "        markers_npy = self.markers.drop(['time'], axis=1).to_numpy()\n",
+    "        markers_npy = markers_npy.reshape(np.shape(markers_npy)[0], -1, 3)\n",
+    "        center = np.mean(markers_npy, axis=1) \n",
+    "        \n",
+    "        center = signal.savgol_filter( center, window_length=window_length, polyorder=polyorder, axis=0)            \n",
+    "        return center\n",
+    "    ################################################################################################################################################    \n",
+    "    def norm(self, window_length=7, polyorder=1):\n",
+    "        markers_npy = self.markers.drop(['time'], axis=1).to_numpy()\n",
+    "        # markers_npy = signal.savgol_filter( markers_npy, window_length=window_length, polyorder=polyorder, axis=0)  \n",
+    "\n",
+    "        markers_npy =  markers_npy.reshape(np.shape(markers_npy)[0], -1, 3)\n",
+    "        v1 = markers_npy[:,1,:] - markers_npy[:,0,:]\n",
+    "        v2 = markers_npy[:,2,:] - markers_npy[:,0,:] \n",
+    "        norm = np.cross( v1, v2)\n",
+    "        norm[ norm[:,2]<0, :] *= -1 \n",
+    "        norm = signal.savgol_filter( norm, window_length=window_length, polyorder=polyorder, axis=0)  \n",
+    "        norm = norm / ( np.reshape(np.linalg.norm(norm, axis=1), (-1,1)) * np.ones((1,3))) \n",
+    "        return norm\n",
+    "####################################################################################################################################################\n",
+    "class SYSTEM(object):\n",
+    "    ################################################################################################################################################\n",
+    "    def __init__(self, system_info = None):\n",
+    "        self.reader = None\n",
+    "        self.tags = list()\n",
+    "\n",
+    "        if system_info is not None:\n",
+    "            system_info_ = system_info.copy()\n",
+    "            reader_markers_color = system_info_.pop('reader')\n",
+    "            self.add_reader(reader_markers_color)\n",
+    "            for IDD,markers_color in system_info_.items(): self.add_tag(markers_color, IDD)\n",
+    "        return\n",
+    "    ################################################################################################################################################\n",
+    "    def add_reader(self, reader_markers_color):\n",
+    "        self.reader = NODE( reader_markers_color )\n",
+    "        return\n",
+    "    ################################################################################################################################################\n",
+    "    def add_tag(self, markers_color, IDD):\n",
+    "        self.tags.append( NODE(markers_color, IDD) )   \n",
+    "        return               \n",
+    "    ################################################################################################################################################\n",
+    "    def load(self, dataset_name, file_name):\n",
+    "        self.dataset_name = dataset_name\n",
+    "        self.file_name = file_name\n",
+    "\n",
+    "        # Loading + time shift\n",
+    "        self.reader.load_markers(dataset_name, file_name) \n",
+    "        start_time = self.reader.markers.time.iloc[0]\n",
+    "\n",
+    "        for i,tag in enumerate(self.tags):            \n",
+    "            self.tags[i].load_markers(dataset_name, file_name)\n",
+    "            self.tags[i].load_rssi(dataset_name, file_name) \n",
+    "            start_time = min( start_time, tag.rssi.time.iloc[0])\n",
+    "\n",
+    "        self.reader.shift_time(start_time)    \n",
+    "        for i,tag in enumerate(self.tags): self.tags[i].shift_time(start_time)\n",
+    "        \n",
+    "        return\n",
+    "    ################################################################################################################################################\n",
+    "    def get_rssi_data(self, window_length=5):\n",
+    "        rssi = pd.DataFrame({'time':self.tags[0].rssi.time})\n",
+    "        for i, tag in enumerate(self.tags):\n",
+    "            tag_rssi = sys.tags[i].rssi.rename({'rssi':'rssi_'+str(i)}, axis=1)\n",
+    "            rssi = rssi.merge( tag_rssi, on='time', how='outer', suffixes=('', ''), sort=True )\n",
+    "\n",
+    "        rssi.fillna(method='ffill', axis=0, inplace=True)             \n",
+    "\n",
+    "        return rssi\n",
+    "    ################################################################################################################################################\n",
+    "    def get_motion_data(self, window_length=5):   \n",
+    "        # Modify this function for different targeted movements\n",
+    "        motion = pd.DataFrame({'time':self.reader.markers.time})\n",
+    "\n",
+    "        N = 10\n",
+    "        ref_center = self.reader.center()\n",
+    "        ref_norm = self.reader.norm()            \n",
+    "        ref_center = np.ones(np.shape(ref_center)) * np.mean(ref_center[:N], axis=0)\n",
+    "        ref_norm = np.ones(np.shape(ref_norm)) * np.mean(ref_norm[:N], axis=0)\n",
+    "\n",
+    "        for i, tag in enumerate(self.tags):\n",
+    "            motion['distance_'+str(i)] = np.linalg.norm( ref_center - tag.center(), axis=1)\n",
+    "            motion['misalignment_'+str(i)] = ( np.arccos(np.abs(np.sum(np.multiply( ref_norm, tag.norm()), axis=1)) ) * 180/np.pi )\n",
+    "\n",
+    "        motion.fillna(method='ffill', axis=0, inplace=True)  \n",
+    "\n",
+    "        return motion\n",
+    "    ################################################################################################################################################\n",
+    "    def get_data(self, window_length=11, save=False):\n",
+    "        rssi = self.get_rssi_data()\n",
+    "        motion = self.get_motion_data()\n",
+    "\n",
+    "        data = rssi.merge( motion, on='time', how='outer', suffixes=('', ''), sort=True )\n",
+    "        data = data.interpolate(method='nearest')\n",
+    "        \n",
+    "        new_time = rssi.time\n",
+    "        new_time = new_time[ motion.time.iloc[0] < new_time]\n",
+    "        new_time = new_time[ new_time < motion.time.iloc[-1] ]\n",
+    "        data = data.merge( new_time, on='time', how='inner', suffixes=('', ''), sort=True )\n",
+    "\n",
+    "#         for i in range(len(self.tags)):\n",
+    "#             data = data.astype({ 'rssi_'+str(i) : int, 'distance_'+str(i) : float, 'misalignment_'+str(i) : float })                \n",
+    "\n",
+    "        data = data.rolling(11, axis=0).mean()      # Smoothing\n",
+    "        data = data.ffill(axis=0).bfill(axis=0)     # Gap Filling\n",
+    "\n",
+    "        if save:\n",
+    "            dataset_file_path = get_dataset_file_path(self.dataset_name, self.file_name)\n",
+    "            create_folder(dataset_file_path)\n",
+    "            data.to_pickle( dataset_file_path )  \n",
+    "            \n",
+    "        return data\n",
+    "####################################################################################################################################################\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
