--- a/regression_ml _sklearn.ipynb
+++ b/regression_ml _sklearn.ipynb
@@ -24,12 +24,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = load_data(database_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "eps = 1e-12\n",
-    "##########################################################################################################\n",
     "class DATA(object):    \n",
     "    # ---------------------------------------------------------------------------------------------------   \n",
     "    def __init__(self, database_name, target, features, records_numbers=None):  \n",
@@ -44,10 +51,11 @@
     "            file_path_list = [get_dataset_file_path(database_name, 'record_'+\"{0:0=2d}\".format(n)) for n in records_numbers]\n",
     "            \n",
     "        for file_path in file_path_list:\n",
-    "            df = pd.read_pickle( file_path )  \n",
-    "            x = df.filter(regex=features, axis=1).values\n",
+    "            df = pd.read_pickle( file_path )\n",
+    "            for feature in features:\n",
+    "                x = df.filter(regex=features, axis=1).values\n",
     "#             y = df.filter(regex=target, axis=1).values\n",
-    "            y = np.mean(df.filter(regex=target, axis=1).values, axis=1)\n",
+    "            y = df.filter(regex=target, axis=1).values\n",
     "            \n",
     "            # lists\n",
     "            self.data.append( df )\n",
@@ -58,31 +66,6 @@
     "        self.Y = np.array(self.Y)\n",
     "        return           \n",
     "    # ---------------------------------------------------------------------------------------------------   \n",
-    "    def mtx( self, Nt_mtx='max' ):  \n",
-    "        # This function padds or cuts all input data (X) to make them same length and generate matrix data(X_mtx)\n",
-    "        # it also nomalize data X-mean(X)\n",
-    "        data_mtx = copy.deepcopy(self)\n",
-    "        if len(np.shape(data_mtx.X))>1:  return data_mtx    \n",
-    "\n",
-    "        Nt_list = [np.shape(x)[0] for x in self.X]\n",
-    "        Nt = int( eval('np.' + Nt_mtx)(Nt_list) )\n",
-    "        Nd, Nf = len(self.X),  np.shape(self.X[0])[1]\n",
-    "        \n",
-    "        data_mtx.X = np.zeros( (Nd,Nt,Nf) )\n",
-    "        data_mtx.Y = np.zeros( (Nd,Nt) )\n",
-    "        \n",
-    "        for idx, x in enumerate(self.X): \n",
-    "            nt = np.shape(x)[0]\n",
-    "            \n",
-    "            if Nt >= nt:\n",
-    "                data_mtx.X[idx,:,:] = np.pad( x, ((0,Nt-nt),(0,0)),'constant')\n",
-    "                data_mtx.Y[idx,:nt] = self.Y[idx]\n",
-    "                \n",
-    "            else:\n",
-    "                data_mtx.X[idx,:,:] = x[:Nt,:]\n",
-    "                data_mtx.Y[idx, :] = self.Y[idx][:Nt]\n",
-    "        return data_mtx\n",
-    "    # ---------------------------------------------------------------------------------------------------\n",
     "    def segment(self, win_size=None, step=1, as_one=True):\n",
     "        if step is None: step= win_size\n",
     "        \n",
@@ -143,6 +126,73 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DATA(object):\n",
+    "    \n",
+    "    def __init__(self, dataset_name, target, features):\n",
+    "        \n",
+    "        self.features_list = list()\n",
+    "        self.target_list = list()\n",
+    "        \n",
+    "        folder_path = os.path.dirname( get_dataset_file_path(dataset_name,'') )\n",
+    "        for file_path in list(Path(folder_path).glob('*.pkl')):        \n",
+    "            data = pd.read_pickle( file_path )   \n",
+    "            if type(features) is list:\n",
+    "                features_df_list, names = list(), list()\n",
+    "                for feature in features:\n",
+    "                    feature_df = data.filter(regex=feature, axis=1)\n",
+    "                    features_df_list.append(feature_df )\n",
+    "                    names = [*names, *feature_df.columns]\n",
+    "                features_df= pd.concat(features_df_list, axis=1, ignore_index=True)\n",
+    "                features_df.columns = names \n",
+    "            else:\n",
+    "                features_df = data.filter(regex=features, axis=1)\n",
+    "            target_df = data.filter(regex=target, axis=1).rename({target:'target'}, axis=1)\n",
+    "            \n",
+    "            self.features_list.append( features_df )\n",
+    "            self.target_list.append( target_df)                \n",
+    "        return\n",
+    "     \n",
+    "    \n",
+    "    \n",
+    "    def get_data(self, idxs_list=None, win_size=None, step=None):        \n",
+    "        if idxs_list is None: idxs_list = np.arange(len(self.features_list))  \n",
+    "        if win_size is not None:\n",
+    "            if step is None: step = win_size\n",
+    "#             elif type(step) is float: step = max(1, int(step * win_size))\n",
+    "\n",
+    "        dataset_df = pd.DataFrame()     \n",
+    "        for idx in idxs_list:  \n",
+    "            features_df, target_df = self.features_list[idx], self.target_list[idx]\n",
+    "            if win_size is not None: features_df, target_df = segment(features_df, target_df, win_size, step)\n",
+    "            \n",
+    "            dataset_df = dataset_df.append( pd.concat([ target_df, features_df], axis=1), ignore_index=True )\n",
+    "        dataset_df.astype('float64').dtypes\n",
+    "        return dataset_df\n",
+    " \n",
+    "\n",
+    "  \n",
+    "def segment(features_df, target_df, win_size, step):\n",
+    "    \n",
+    "    features_df_segmented = pd.DataFrame()\n",
+    "    target_df_segmented = pd.DataFrame()\n",
+    "\n",
+    "    for i in range(0, len(features_df)- win_size, step):\n",
+    "        target_df_segmented = target_df_segmented.append(target_df.loc[i+win_size-1], ignore_index=True)\n",
+    "\n",
+    "        row = dict()\n",
+    "        for feature_name in features_df.columns: \n",
+    "            for j in range(win_size): row.update({ feature_name + \"{0:0=2d}\".format(j): features_df.loc[i+j, feature_name] })        \n",
+    "        features_df_segmented = features_df_segmented.append(row, ignore_index=True)\n",
+    "\n",
+    "    return features_df_segmented, target_df_segmented"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -151,23 +201,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train Data - X: \t (30,) (521, 2)\n",
-      "Train Data - Y: \t (30,) (521,)\n",
-      "Validation Data - X: \t (18,) (430, 2)\n",
-      "Validation Data - Y: \t (18,) (430,)\n"
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-fd07c6c18f4e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mfeatures\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'rssi'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'status'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mtrain_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mDATA\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'dataset_02'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mvalidation_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mDATA\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'dataset_03'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-2-2c88db9be949>\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, database_name, target, features, records_numbers)\u001b[0m\n\u001b[0;32m     15\u001b[0m             \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_pickle\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0mfile_path\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mfeature\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m                 \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfilter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mregex\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfeatures\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m \u001b[1;31m#             y = df.filter(regex=target, axis=1).values\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m             \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfilter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mregex\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtarget\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36mfilter\u001b[1;34m(self, items, like, regex, axis)\u001b[0m\n\u001b[0;32m   4710\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mmatcher\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msearch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mensure_str\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4711\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 4712\u001b[1;33m             \u001b[0mmatcher\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mre\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mregex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   4713\u001b[0m             \u001b[0mvalues\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlabels\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4714\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\re.py\u001b[0m in \u001b[0;36mcompile\u001b[1;34m(pattern, flags)\u001b[0m\n\u001b[0;32m    232\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mcompile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    233\u001b[0m     \u001b[1;34m\"Compile a regular expression pattern, returning a Pattern object.\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 234\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0m_compile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    235\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    236\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mpurge\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\re.py\u001b[0m in \u001b[0;36m_compile\u001b[1;34m(pattern, flags)\u001b[0m\n\u001b[0;32m    274\u001b[0m         \u001b[0mflags\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mflags\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    275\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 276\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0m_cache\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpattern\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    277\u001b[0m     \u001b[1;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    278\u001b[0m         \u001b[1;32mpass\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unhashable type: 'list'"
      ]
     }
    ],
    "source": [
-    "target = 'distance' \n",
-    "features = 'rssi'\n",
+    "target = 'distance_0' \n",
+    "features = ['rssi','status']\n",
     "\n",
     "train_data = DATA('dataset_02', target, features)\n",
     "validation_data = DATA('dataset_03', target, features)\n",
@@ -187,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 47,
    "metadata": {
     "scrolled": true
    },
@@ -229,7 +284,7 @@
        "                          validation_fraction=0.1, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
