--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
@@ -26,6 +26,12 @@
     "        self.markers_color = markers_color\n",
     "        self.IDD = IDD\n",
     "        self.port = port\n",
+    "    ################################################################################################################################################\n",
+    "    def load(self, dataset_name, file_name, window_length=11):\n",
+    "        self.load_markers(dataset_name, file_name, window_length=window_length)        \n",
+    "        if self.IDD is not None: self.load_rssi(dataset_name, file_name, window_length=window_length)\n",
+    "        if self.port is not None: self.load_vind(dataset_name, file_name, window_length=window_length)\n",
+    "        return \n",
     "    ################################################################################################################################################\n",
     "    def load_markers(self, dataset_name, file_name, window_length=11):   \n",
     "      \n",
@@ -73,16 +79,15 @@
     "        return\n",
     "    ################################################################################################################################################\n",
     "    def load_vind(self, dataset_name, file_name, window_length=11):\n",
-    "\n",
     "        # Load data \n",
     "        arduino_file_path = get_arduino_file_path(dataset_name, file_name)               \n",
     "        raw_df = pd.read_csv(arduino_file_path)\n",
     "\n",
-    "        self.vind = pd.DataFrame({'vind': raw_df[self.port]})\n",
+    "        self.vind = raw_df\n",
     "\n",
     "        # Processing\n",
-    "        self.vind = self.vind.rolling(window_length, axis=0).median()   # Smoothing\n",
-    "        self.vind = self.vind.ffill(axis=0).bfill(axis=0)               # Gap Filling\n",
+    "        self.vind = self.rssi.rolling(window_length, axis=0).median()   # Smoothing\n",
+    "        self.vind = self.rssi.ffill(axis=0).bfill(axis=0)               # Gap Filling\n",
     "         \n",
     "        # Time\n",
     "        date_time = pd.to_datetime( raw_df['time'] , format=datime_format)\n",
@@ -116,12 +121,123 @@
     "        # norm = np.nan_to_num(norm)\n",
     "        # norm = signal.savgol_filter( norm, window_length=window_length, polyorder=polyorder, axis=0)  \n",
     "        norm = norm / ( np.reshape(np.linalg.norm(norm, axis=1), (-1,1)) * np.ones((1,3))) \n",
-    "        return norm\n"
+    "        return norm\n",
+    "####################################################################################################################################################\n",
+    "####################################################################################################################################################\n",
+    "class SYSTEM(object):\n",
+    "    ################################################################################################################################################\n",
+    "    def __init__(self, system_info = None):\n",
+    "        self.reader = None\n",
+    "        self.tags = list()\n",
+    "\n",
+    "        if system_info is not None:\n",
+    "            system_info_ = system_info.copy()\n",
+    "            reader_markers_color = system_info_.pop('reader')\n",
+    "            self.add_reader(reader_markers_color)\n",
+    "            for IDD,markers_color in system_info_.items(): self.add_tag(markers_color, IDD)\n",
+    "        return\n",
+    "    ################################################################################################################################################\n",
+    "    def add_reader(self, reader_markers_color):\n",
+    "        self.reader = NODE( reader_markers_color )\n",
+    "        return\n",
+    "    ################################################################################################################################################\n",
+    "    def add_tag(self, markers_color, IDD=None, port=None):\n",
+    "        self.tags.append( NODE(markers_color, IDD=IDD, port=port) )   \n",
+    "        return               \n",
+    "    ################################################################################################################################################\n",
+    "    def load(self, dataset_name, file_name):\n",
+    "        self.dataset_name = dataset_name\n",
+    "        self.file_name = file_name\n",
+    "\n",
+    "        # Loading + time shift\n",
+    "        self.reader.load(dataset_name, file_name) \n",
+    "        start_time = self.reader.markers.time.iloc[0]\n",
+    "\n",
+    "        for i,tag in enumerate(self.tags):            \n",
+    "            self.tags[i].load(dataset_name, file_name)\n",
+    "            start_time = min( start_time, tag.rssi.time.iloc[0])\n",
+    "\n",
+    "        self.reader.shift_time(start_time)    \n",
+    "        for i,tag in enumerate(self.tags): self.tags[i].shift_time(start_time)\n",
+    "        \n",
+    "        return\n",
+    "    ################################################################################################################################################\n",
+    "    def get_rssi_data(self, window_length=11, polyorder=1):\n",
+    "        rssi = pd.DataFrame({'time':self.tags[0].rssi.time})\n",
+    "        for i, tag in enumerate(self.tags):\n",
+    "            tag_rssi = sys.tags[i].rssi.rename({'rssi':'rssi_'+str(i)}, axis=1)\n",
+    "            rssi = rssi.merge( tag_rssi, on='time', how='outer', suffixes=('', ''), sort=True )               \n",
+    " \n",
+    "        # RSSI data status\n",
+    "        status = pd.DataFrame({'time':rssi.time})\n",
+    "        for column in rssi.columns:\n",
+    "            if column != 'time': status[column.replace('rssi','status')] = np.isnan(rssi[column].values)\n",
+    "        \n",
+    "        # # Smoothing\n",
+    "        rssi.loc[:, rssi.columns != 'time'] = rssi.loc[:, rssi.columns != 'time'].rolling(window_length, axis=0).mean().fillna(method='ffill', axis=0).bfill(axis=0)      \n",
+    "        for col in rssi.columns:\n",
+    "            if col != 'time': rssi.loc[:,col]= signal.savgol_filter( rssi.loc[:,col], window_length=window_length, polyorder=polyorder) \n",
+    "\n",
+    "        return rssi, status       \n",
+    "    ################################################################################################################################################\n",
+    "    def get_motion_data(self, window_length=11, polyorder=1):   \n",
+    "        # Modify this function for different targeted movements\n",
+    "        motion = pd.DataFrame({'time':self.reader.markers.time})\n",
+    "\n",
+    "        N = 10\n",
+    "        ref_center = self.reader.center()\n",
+    "        ref_center = np.ones(np.shape(ref_center)) * np.mean(ref_center[:N], axis=0)\n",
+    "\n",
+    "        ref_norm = self.reader.norm()     \n",
+    "        ref_norm =  np.mean(ref_norm[:N], axis=0)\n",
+    "        ref_norm = ref_norm / np.linalg.norm(ref_norm)\n",
+    "        ref_norm = np.ones(np.shape(ref_norm)) * ref_norm\n",
+    "\n",
+    "        \n",
+    "        for i, tag in enumerate(self.tags):\n",
+    "            distance_vec = ref_center - tag.center()\n",
+    "            distance = np.linalg.norm( distance_vec, axis=1)\n",
+    "            lat_misalignment = np.sqrt(distance**2 - np.sum(np.multiply( distance_vec, ref_norm), axis=1)**2)           \n",
+    "            ang_misalignment = np.arcsin( np.linalg.norm(np.cross(ref_norm, tag.norm()), axis=1) )*180/np.pi\n",
+    "            \n",
+    "            motion['distance_'+str(i)] = signal.savgol_filter( distance, window_length=window_length, polyorder=polyorder, axis=0)                        \n",
+    "            motion['lat_misalignment_'+str(i)] = signal.savgol_filter( lat_misalignment, window_length=window_length, polyorder=polyorder, axis=0)        \n",
+    "            motion['ang_misalignment_'+str(i)] = signal.savgol_filter( ang_misalignment, window_length=window_length, polyorder=polyorder, axis=0)        \n",
+    "\n",
+    "        # ang_misalignment = np.arcsin( np.mean([ np.linalg.norm(np.cross(ref_norm, tag.norm()), axis=1) for tag in self.tags],0) )*180/np.pi\n",
+    "        # motion['ang_misalignment'] = signal.savgol_filter( ang_misalignment, window_length=window_length, polyorder=polyorder, axis=0)        \n",
+    "\n",
+    "        return motion\n",
+    "    ################################################################################################################################################\n",
+    "    def get_data(self, window_length=11, save=False,  data_status=False):\n",
+    "        rssi, status = self.get_rssi_data()\n",
+    "        motion = self.get_motion_data()       \n",
+    "    \n",
+    "        data = pd.DataFrame({'time':rssi.time})\n",
+    "        data = data.merge( motion, on='time', how='outer', suffixes=('', ''), sort=True )\n",
+    "        data = data.interpolate(method='nearest')        \n",
+    "        data.loc[:, data.columns!='time'] = data.loc[:, data.columns!='time'].rolling(window_length, axis=0).mean().fillna(method='ffill', axis=0).bfill(axis=0)      \n",
+    "        \n",
+    "        data = data.merge(rssi, on='time', how='inner', suffixes=('', ''), sort=True)\n",
+    "        data = data.merge(status, on='time', how='inner', suffixes=('', ''), sort=True)\n",
+    "\n",
+    "        time = rssi.time\n",
+    "        time = time[ motion.time.iloc[0] < time]\n",
+    "        time = time[ time < motion.time.iloc[-1] ]\n",
+    "        data = data.merge( time, on='time', how='inner', suffixes=('', ''), sort=True )\n",
+    "\n",
+    "        if save:\n",
+    "            dataset_file_path = get_dataset_file_path(self.dataset_name, self.file_name)\n",
+    "            create_folder(dataset_file_path)\n",
+    "            data.to_pickle( dataset_file_path )  \n",
+    "            print(self.file_name, 'is saved.')\n",
+    "        return data\n",
+    "####################################################################################################################################################\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 58,
    "metadata": {
     "collapsed": true
    },
